# gospelo-backlog-docs

./: .env.example  .gitignore  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.claude/: gospelo-config.yaml
.claude/commands/: docs.md  spec.md
docs/: CHANGELOG.md  CHANGELOG_jp.md  CONTRIBUTING.md  CONTRIBUTING_jp.md  HANDOVER.md  HANDOVER_jp.md  QUICKSTART_jp.md  README_jp.md
docs/test/: test_report.md  test_report_jp.md
src/gospelo_backlog_docs/: __init__.py  __main__.py  backlog_client.py  cli.py  markdown_parser.py  mermaid_converter.py  uploader.py
tests/: __init__.py  test_backlog_client.py  test_cli.py  test_markdown_parser.py  test_mermaid_converter.py  test_uploader.py
